# python-api-challenge

./: pyproject.toml
shibe-generator/: app.py  controller.py
